# CPP

./: .gitignore
TasksFromInterviews/G5_GameDev/ArrayBaseRealisation/: CArray.h  CIntArrayTest.h  CMakeLists.txt  CStringArrayTests.h  CommonTests.h  main.cpp
TasksFromInterviews/G5_GameDev/ListBaseRealisation/: CArray.h  CIntArrayTest.h  CMakeLists.txt  CStringArrayTests.h  CommonTests.h  main.cpp
TasksFromInterviews/PowerMachines/Task1/: CMakeLists.txt  Controller.cpp  Controller.h  ParamReceiver.cpp  ParamReceiver.h  Timer.h  main.cpp
TasksFromInterviews/PowerMachines/Task1_tests/: CMakeLists.txt  tst_alarmy_tests.cpp
